@@ -14,7 +14,7 @@ char *hpd_up =
         "\n"
         "Main options:\n"
         "\n Output:\n"
-        "  -d, [--raw] [--batch] [--export|-E] [-print]\n"
+        "  -d, [--raw] [--batch] [--export|-E] [-print] [ --r[u]sleep]\n"
         "                        Read directory log and print to stdout (text/binary)\n"
         "                          (-vv prints dir nuke status from nukelog)\n"
         "                         --batch         Prints with simple formatting\n"
@@ -32,7 +32,7 @@ char *hpd_up =
         "                        Read specified log\n"
         "  -t                    Read all user files inside /ftp-data/users\n"
         "  -g                    Read all group files inside /ftp-data/groups\n"
-        "  -x <root dir> [-R] ([--dir]|[--file]|[--cdir]) [--maxdepth=<limit>] [--mindepth=<limit>] [--fd] [-print] ..\n"
+        "  -x <root dir> [-R] ([--dir]|[--file]|[--cdir]) [--maxdepth=<limit>] [--mindepth=<limit>] [--fd] [-print] [ --r[u]sleep]..\n"
         "                        Traverse filesystem and processes each item found with available filters/hooks\n"
         "                          --dir - scan directories only\n"
         "                          --file - scan files only (default is both dirs and files)\n"
@@ -175,17 +175,20 @@ char *hpd_up =
         "  --rev                 Reverses the order in which records are processed\n"
         "  --ipc <key>           Override gl's shared memory segment key setting\n"
         "  --daemon              Fork process into background\n"
-        "  --loop <interval>     Loops the given operation\n"
+        "  --loop <interval>\n   Loops the given operation\n"
         "                           Use caution, some operations might fail when looped\n"
         "                           This is usefull when running yourown scripts (--exec)\n"
         "                         Execute command each loop\n"
+        "  --rsleep              Timeout in seconds (log parsing/filesystem walking)\n"
+        "  --rusleep             Timeout in nanoseconds (log parsing/filesystem walking)\n"
         "  --loglevel <0-6>      Log verbosity level (1: exception only..6: everything)\n"
         "                           Level 0 turns logging off\n"
         "  --silent              Silent mode\n"
         "  --ftime               Prepend formatted timestamps to output\n"
         "  --log                 Force logging enabled\n"
         "  --fork <command>      Fork process into background and execute <command>\n"
-        "  --[u]sleep <timeout>  Wait for <timeout> before running\n"
+        "  --sleep <timeout>     Wait for <timeout> seconds before running\n"
+        "  --usleep <timeout>    Wait for <timeout> nanoseconds before running\n"
         "  --version             Print version and exit\n"
         "\n"
         "Directory and file:\n"
