@@ -19,5 +19,8 @@ _d_omfp_fp g_omfp_norm, g_omfp_raw, g_omfp_ocomp, g_omfp_eassemble,
 
 int
 g_print_stats(char *file, uint32_t flags, size_t block_sz);
+void
+g_omfp_timeout(void);
+
 
 #endif /* OMFP_H_ */
